--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -12,6 +12,7 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           script: |
             cd $HOME/www/
+    
   Copy:
     needs: Connexion
     runs-on: ubuntu-latest
@@ -34,3 +35,12 @@ jobs:
               echo "Le répertoire flask de destination sur votre serveur n'existe pas"
               exit 1
             fi
+  create-file:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Create sensitive file
+        run: |
+          echo "${{ secrets.MY_SECRET_FILE_CONTENT }}" > .htpasswd  
