--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Create sensitive file
         run: |
-          echo "${{ secrets.MY_SECRET_FILE_CONTENT }}" > .htpasswd 
+          echo "${{ secrets.MY_SECRET_FILE_CONTENT }}" > $HOME/www/atelier1/.htpasswd 
           
   Copy:
     needs: Connexion
