--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -17,10 +17,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
+  
       - name: Create sensitive file
         run: |
           echo "${{ secrets.MY_SECRET_FILE_CONTENT }}" > .htpasswd
+      
       - name: Transfer .htpasswd to server
         uses: appleboy/scp-action@master
         with:
@@ -28,7 +29,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           source: ".htpasswd"
-          target: "$HOME/www/atelier1/"
+          target: "$HOME/www/"
           
   Copy:
     needs: Connexion
