--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -11,7 +11,8 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           script: |
-            cd $HOME/www/          
+            cd $HOME/www/
+    
   Copy:
     needs: Connexion
     runs-on: ubuntu-latest
@@ -28,22 +29,24 @@ jobs:
             git clone https://github.com/${{ github.repository }}.git
             # Vérifier si le répertoire de destination existe
             if [ "$(ls -A ./www)" ]; then
-              rsync -r --delete ./$last_directory/ ./www
+              rsync -r ./$last_directory/ ./www
               rm -rf ./$last_directory
             else
               echo "Le répertoire flask de destination sur votre serveur n'existe pas"
               exit 1
-            fi
+
   create-file:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-  
+
       - name: Create sensitive file
         run: |
           echo "${{ secrets.MY_SECRET_FILE_CONTENT }}" > .htpasswd
-      
+          ls -la  # Vérifiez si le fichier est créé
+          cat .htpasswd  # Vérifiez le contenu
+
       - name: Transfer .htpasswd to server
         uses: appleboy/scp-action@master
         with:
@@ -51,5 +54,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           source: ".htpasswd"
-          target: "$HOME/www/"          
-
+          target: "$HOME/www/"
