--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -12,7 +12,7 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           script: |
             cd $HOME/www/
-    
+
   Copy:
     needs: Connexion
     runs-on: ubuntu-latest
@@ -29,17 +29,19 @@ jobs:
             git clone https://github.com/${{ github.repository }}.git
             # Vérifier si le répertoire de destination existe
             if [ "$(ls -A ./www)" ]; then
-              rsync -r ./$last_directory/ ./www
+              rsync -r --delete ./$last_directory/ ./www
               rm -rf ./$last_directory
             else
               echo "Le répertoire flask de destination sur votre serveur n'existe pas"
               exit 1
+            fi
 
-  create-file:
+  Create-file:
+    needs: Copy
     runs-on: ubuntu-latest
     steps:
-      - name: Transfer .htpasswd to server
-        uses: appleboy/scp-action@master
+      - name: Connexion SSH et mise à jour htpasswd
+        uses: appleboy/ssh-action@master
         with:
           host: "ssh-${{ secrets.USERNAME }}.alwaysdata.net"
           username: ${{ secrets.USERNAME }}
